istio-demo1/istio/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-app1
  labels:
    app: istio-app1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: istio-app1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-app1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: istio-app1
        version: v1
    spec:
      containers:
      - name: istio-app1
        image: laurentiuspilca/istio1-e1:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-app1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: istio-app1
        version: v2
    spec:
      containers:
      - name: istio-app1
        image: laurentiuspilca/istio-app1:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
