istio-demo1/istio/destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: example1
spec:
  host: example1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
