istio-demo1/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example1-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example1-app
spec:
  hosts:
  - "*"
  gateways:
  - example1-gateway
  http:
  - route:
    - destination:
        host: example1
        subset: v1
      weight: 10
    - destination:
        host: example1
        subset: v2
      weight: 90
