istio-demo1/istio/v1-host.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-app1
spec:
  hosts:
  - istio-app1
  http:
  - route:
    - destination:
        host: istio-app1
        subset: v1
